# ace-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bartman-toolchain.cmake  bebbo-toolchain.cmake  common-toolchain.cmake  config.fs-uae  target-definition.cmake
S/: Startup-Sequence
src/: game.c  game.h  main.c
